<resources>
    <string name="app_name">Uwork</string>
    <string name="login">LOGIN</string>
    <string name="logo">logo</string>
    <string name="btnColorLogin">#26A69A</string>
    <string name="bgColor">#b7fff1</string>
    <string name="signUp">Sign Up?</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="hire">Hire a Worker</string>
    <string name="usernname">Username</string>
    <string name="confirm">Confirm Password</string>
    <string name="findWorker">Find a Worker</string>
    <string name="logout">Logout</string>


    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_request">Map</string>
</resources>
